<resources>
    <string name="app_name">Star Food</string>
    <string name="slogan">Get your favorite dish just with one touch</string>
    <string name="food_category">Food category</string>
    <string name="nav_home">Home</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="veggie">Veggie</string>
    <string name="spicy">Spicy</string>
    <string name="not_spicy">Not spicy</string>
    <string name="all_dishes">All dishes</string>
    <string name="cart">Cart</string>
    <string name="sign_out">Sign out</string>
    <string name="register_with_email_and_password">Register with email and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password_msg">Enter your email account and you\'ll receive a link to reset the password</string>
    <string name="send_email">Send Email</string>
    <string name="skip">Skip</string>
    <string name="reset_password">Reset password</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="login">Login</string>
    <string name="connect_with"><![CDATA[— Or connect with —]]></string>
    <string name="guest">Guest</string>
    <string name="pay">Pay</string>
    <string name="TODO">Will be implemented soon!</string>
    <string name="calories">Calories</string>
    <string name="enjoy_it">Enjoy It!</string>

    //facebook auth
    <string name="facebook_app_id">452286371970412</string>
    <string name="fb_login_protocol_scheme">fb452286371970412</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="dish_name">Dish Name</string>
    <string name="show_comments">Show Comments</string>
    <string name="description">Description</string>

</resources>
