<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_dishes"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:iconTint="@color/white"
            android:title="@string/all_dishes" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:iconTint="@color/white"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:iconTint="@color/white"
            android:title="@string/sign_out" />

    </group>

</menu>
