<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sky"
    tools:context=".Activities.ActivityCart">

    <ImageView
        android:id="@+id/link_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home_white_26dp"
        android:layout_margin="4dp"
        android:padding="10dp"/>

    <RelativeLayout
        android:id="@+id/layout_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/link_home">

        <RelativeLayout
            android:id="@+id/layout_dish_to_buy"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/img_dish_to_buy"
                android:scaleType="centerCrop"
                android:src="@drawable/background_sky"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/txt_dish_to_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/backgroundDark"
                android:textSize="28sp"
                android:padding="5dp"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textStyle="italic"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_enjoy_it"
            android:layout_below="@+id/layout_dish_to_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/enjoy_it"
            android:textColor="@color/white"
            android:background="@drawable/dev_text_view_style1"
            android:textSize="30sp"
            android:padding="5dp"
            android:gravity="center"
            android:textStyle="italic|bold"/>

        <TextView
            android:id="@+id/txt_calories"
            android:layout_below="@+id/txt_enjoy_it"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/calories"
            android:textColor="@color/white"
            android:background="@drawable/dev_text_view_style1"
            android:textSize="30sp"
            android:padding="15dp"
            android:gravity="center"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_todo"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TODO"
            android:textColor="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:padding="8dp"
            android:backgroundTint="@color/overlayBackground"
            android:textStyle="italic"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/txtView_userMsg_cart"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:shape= "rectangle"
        android:text="@string/pay"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"/>

</RelativeLayout>