<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sky"
    tools:context=".Activities.ActivityLogin">

    <RelativeLayout
        android:id="@+id/layout_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txt_link_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dev_text_view_style1"
            android:fontFamily="sans-serif"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:padding="10dp"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textStyle="italic"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_above="@+id/layout_login_bottom"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent = "true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_above="@id/layout_login"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logo_long_yellow"/>

        <RelativeLayout
            android:id="@+id/layout_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-light"
                        android:textAllCaps="true"/>

                    <EditText
                        android:id="@+id/edit_email_login"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/dev_edit_text_style1"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-light"
                        android:paddingStart="5dp"
                        android:paddingEnd="10dp"
                        android:inputType="textEmailAddress"
                        android:drawableStart="@drawable/ic_email" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-light"
                        android:textAllCaps="true"/>

                    <EditText
                        android:id="@+id/edit_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/dev_edit_text_style1"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/ic_password" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_login"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text ="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txt_sign_in_with"
                android:layout_below="@id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_with"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="italic|bold"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_below="@+id/txt_sign_in_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btn_fb_login"
                    android:layout_width="51dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="17dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_google_sign_in"
                    android:layout_width="51dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_login_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/txt_link_sign_up_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/dev_text_view_style1"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up_now"
            android:textAllCaps="true"
            android:padding="10dp"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/txt_link_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:padding="10dp"
            android:gravity="right"
            android:background="@drawable/dev_text_view_style1"
            android:fontFamily="sans-serif"
            android:text="@string/reset_password"
            android:textAllCaps="true"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textStyle="italic"/>

    </LinearLayout>


</RelativeLayout>