<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityLogin"
    android:background="@drawable/background_sky">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent = "true"
        android:layout_margin="40dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:layout_marginBottom="50dp"
            android:src="@drawable/logo_long_yellow"
            android:layout_marginTop="10dp"
            android:layout_above="@id/layout_reset_password"/>

        <RelativeLayout
            android:id="@+id/layout_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/txt_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/reset_password_msg"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_below="@id/txt_reset_password"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-light"
                    android:textAllCaps="true"/>

                <EditText
                    android:id="@+id/edit_send_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/dev_edit_text_style1"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email"/>

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_send_email"
            android:layout_below="@+id/layout_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/button"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:text="@string/send_email"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </RelativeLayout>

</RelativeLayout>